<resources>
    <string name="app_name">Travelmantics</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_deal">New Travel Deal</string>
    <string name="action_logout">Logout</string>
    <string name="deal_image">Deal Image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="title_activity_view_deal">ViewDealActivity</string>
    <string name="select_image">Select Image</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="admin">administrators</string>
    <string name="deals_pictures">deals_pictures</string>
    <string name="travel_deals">Travel_Deals</string>
    <string name="deals">Deals</string>
    <string name="imageType">image/jpeg</string>
</resources>
